Adds require webpack entry_point

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,8 @@ invenio_base.blueprints =
     invenio_gpxpreviewer = invenio_gpxpreviewer.views:blueprint
 invenio_i18n.translations =
     messages = invenio_gpxpreviewer
+invenio_assets.webpack =
+    invenio_gpxpreviewer_theme = invenio_gpxpreviewer.webpack:theme
 invenio_previewer.previewers =
     gpx = invenio_gpxpreviewer.extensions.gpx
 
